# icfp-contest-2015

./: .fac  .gitignore  Cargo.toml  Makefile  README  README.md  TEAM  TODO.md  display_results.py  get.sh  output.json  parse.py  pop  potential-phrases  pull-all.sh  record-screen.sh  run-problems.sh  run.py  srun-problems.sh  submit.sh  submit_best.py  test-phrase.py
problems/: problem_1.json  test.json
solutions/: 0-0-0.json  0-0-1499.json  0-0-1643.json  0-0-6811.json  0-0-6925.json  0-0-7145.json  1-0-3246.json  1-0-3642.json  1-0-4118.json  1-0-739.json  1-0-761.json  1-0-809.json  1-0-958.json  10-0-5212.json  10-0-616.json  10-0-638.json  10-0-646.json  10-0-648.json  11-0-1643.json  11-0-1681.json  11-0-2849.json  11-0-4129.json  11-0-4135.json  11-12877-1459.json  11-12877-1502.json  11-12877-3529.json  11-12877-3554.json  11-12877-3692.json  11-16526-1540.json  11-16526-1613.json  11-16526-1873.json  11-16526-1986.json  11-19558-1367.json  11-19558-1486.json  11-19558-1862.json  11-19558-1974.json  11-19558-3043.json  11-20528-1453.json  11-20528-1463.json  11-20528-1521.json  (+792 more)
src/: davar.rs  in_out.rs  main.rs  opts.rs  simulate.rs  solver.rs
